--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Flood location tracking portal",
+  "name": "floodtracking",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
